--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StavaRaChI</title>
-    <link rel="shortcut icon" href="assets/img/logo/icon.png">
+    <link rel="shortcut icon" href="assets/icon.png">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style/main.css">
     <link rel="stylesheet" href="style/navbar.css">
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div id="particles-js"></div>
-        <img id="myLogo" class="navImg" src="assets/logo/logo.jpg" alt="">
+        <img id="myLogo" class="navImg" src="assets/logo.jpg" alt="">
         <div class="navbar">
             <ul class="linkMenu">
                 <li><a href="https://www.youtube.com/channel/UCf1YbKLs56GD5VuFtiVKbqg"><i class='bx bxl-youtube'></i></a></li>
