--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="style/tittle.css">
 </head>
 <body>
+    <div id="particles-js"></div>
     <header>
-        <div id="particles-js"></div>
         <img id="myLogo" class="navImg" src="assets/logo.jpg" alt="">
         <div class="navbar">
             <ul class="linkMenu">
@@ -26,5 +26,7 @@
             <h1>StavaRaChI</h1>
         </div>
     </header>
+    <script src="particles.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
