--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h1>StavaRaChI</h1>
         </div>
     </header>
-    <script src="particles.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
