--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <img id="myLogo" class="navImg" src="assets/logo.jpg" alt="">
         <div class="navbar">
             <ul class="linkMenu">
-                <li><a href="https://www.youtube.com/channel/UCf1YbKLs56GD5VuFtiVKbqg"><i class='bx bxl-youtube'></i></a></li>
-                <li><a href="https://vk.com/neodaptap"><i class='bx bxl-vk' ></i></a></li>
-                <li><a href="https://steamcommunity.com/profiles/76561199334130810/"><i class='bx bxl-steam' ></i></a></li>
-                <li><a href="https://github.com/StavaRachl"><i class='bx bxl-github'></i></a></li>
+                <li><a href="https://www.youtube.com/channel/UCf1YbKLs56GD5VuFtiVKbqg" target="_blank"><i class='bx bxl-youtube'></i></a></li>
+                <li><a href="https://vk.com/neodaptap" target="_blank"><i class='bx bxl-vk' ></i></a></li>
+                <li><a href="https://steamcommunity.com/profiles/76561199334130810/" target="_blank"><i class='bx bxl-steam' ></i></a></li>
+                <li><a href="https://github.com/StavaRachl" target="_blank"><i class='bx bxl-github'></i></a></li>
             </ul>
         </div>
         <div class="tittle">
