--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,6 +16,7 @@
         <img id="myLogo" class="navImg" src="assets/logo.jpg" alt="">
         <div class="navbar">
             <ul class="linkMenu">
+                <li><a id="copyBtnDiscord" href=""><i class='bx bxl-discord-alt'></i></a></li>
                 <li><a href="https://www.youtube.com/channel/UCf1YbKLs56GD5VuFtiVKbqg" target="_blank"><i class='bx bxl-youtube'></i></a></li>
                 <li><a href="https://vk.com/neodaptap" target="_blank"><i class='bx bxl-vk' ></i></a></li>
                 <li><a href="https://steamcommunity.com/profiles/76561199334130810/" target="_blank"><i class='bx bxl-steam' ></i></a></li>
@@ -27,6 +28,7 @@
         </div>
     </header>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
-    <script src="app.js"></script>
+    <script src="../script/app.js"></script>
+    <script src="../script/copyDiscord.js"></script>
 </body>
 </html>
