--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </header>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
-    <script src="../script/app.js"></script>
-    <script src="../script/copyDiscord.js"></script>
+    <script src="./script/app.js"></script>
+    <script src="./script/copyDiscord.js"></script>
 </body>
 </html>
