--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul class="linkMenu">
                 <li><a id="copyBtnDiscord" href=""><i class='bx bxl-discord-alt'></i></a></li>
                 <li><a href="https://www.youtube.com/channel/UCf1YbKLs56GD5VuFtiVKbqg" target="_blank"><i class='bx bxl-youtube'></i></a></li>
-                <li><a href="https://vk.com/neodaptap" target="_blank"><i class='bx bxl-vk' ></i></a></li>
+                <li><a href="https://vk.com/stavarachiii" target="_blank"><i class='bx bxl-vk' ></i></a></li>
                 <li><a href="https://steamcommunity.com/profiles/76561199334130810/" target="_blank"><i class='bx bxl-steam' ></i></a></li>
                 <li><a href="https://github.com/StavaRachl" target="_blank"><i class='bx bxl-github'></i></a></li>
             </ul>
